adding delete route with ProductStatus domain
